[android] Fixed arrow/distance layout in PP

--- a/android/res/layout/place_page_preview.xml
+++ b/android/res/layout/place_page_preview.xml
@@ -31,6 +31,8 @@
     android:layout_marginLeft="@dimen/margin_base"
     android:layout_toEndOf="@id/downloader_status_frame"
     android:layout_toRightOf="@id/downloader_status_frame"
+    android:layout_toLeftOf="@+id/direction_frame"
+    android:layout_toStartOf="@+id/direction_frame"
     android:ellipsize="end"
     android:fontFamily="@string/robotoMedium"
     android:maxLines="@integer/pp_title_lines"
@@ -50,6 +52,8 @@
     android:layout_marginRight="@dimen/margin_base"
     android:layout_alignLeft="@id/tv__title"
     android:layout_alignStart="@id/tv__title"
+    android:layout_toLeftOf="@id/direction_frame"
+    android:layout_toStartOf="@id/direction_frame"
     android:ellipsize="end"
     android:fontFamily="@string/robotoMedium"
     android:maxLines="@integer/pp_title_lines"
@@ -68,9 +72,9 @@
     android:layout_marginStart="@dimen/margin_base"
     android:layout_marginLeft="@dimen/margin_base"
     android:layout_toEndOf="@id/downloader_status_frame"
-    android:layout_toLeftOf="@+id/direction_frame"
     android:layout_toRightOf="@id/downloader_status_frame"
-    android:layout_toStartOf="@+id/direction_frame"
+    android:layout_toLeftOf="@id/direction_frame"
+    android:layout_toStartOf="@id/direction_frame"
     android:lines="1"
     android:textAppearance="@style/MwmTextAppearance.Body1.Secondary"
     android:ellipsize="end"
@@ -78,17 +82,17 @@
     tools:text="Subtitle, very very very very very very very long"/>
 
   <LinearLayout
-    android:id="@+id/direction_frame"
+    android:id="@id/direction_frame"
     android:layout_width="wrap_content"
-    android:layout_height="@dimen/direction_frame_min_height"
+    android:layout_height="wrap_content"
     android:layout_marginEnd="@dimen/margin_base"
     android:layout_marginRight="@dimen/margin_base"
     android:layout_alignParentEnd="true"
     android:layout_alignParentRight="true"
     android:layout_alignWithParentIfMissing="true"
-    android:layout_below="@id/tv__secondary_title"
+    android:layout_alignBottom="@id/tv__subtitle"
     android:background="?selectableItemBackground"
-    android:gravity="center_vertical"
+    android:gravity="bottom"
     android:minHeight="@dimen/direction_frame_min_height"
     android:orientation="horizontal"
     tools:background="#111111F0">
