[android] Fixed sponsored logo layout

--- a/android/res/layout/place_page_sponsored_gallery.xml
+++ b/android/res/layout/place_page_sponsored_gallery.xml
@@ -22,16 +22,22 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerVertical="true"
+      android:layout_alignParentLeft="true"
+      android:layout_alignParentStart="true"
+      android:layout_marginRight="@dimen/margin_half"
+      android:layout_marginEnd="@dimen/margin_half"
       android:textAppearance="@style/MwmTextAppearance.Body3"
       android:fontFamily="@string/robotoMedium"
+      android:layout_toLeftOf="@+id/btn__sponsored_logo"
+      android:layout_toStartOf="@+id/btn__sponsored_logo"
+      android:ellipsize="end"
+      android:maxLines="2"
       tools:text="@string/place_page_viator_title"
       tools:targetApi="jelly_bean"/>
     <ImageView
-      android:id="@+id/btn__sponsored_logo"
+      android:id="@id/btn__sponsored_logo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:paddingLeft="@dimen/margin_half"
-      android:paddingRight="@dimen/margin_half"
       android:layout_marginTop="@dimen/margin_half"
       android:layout_marginBottom="@dimen/margin_half"
       android:layout_centerVertical="true"
